# github-create-and-add-labels-all-repos-using-python

./: README.md  create_new_labels.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: create-release.yaml  github-create-and-add-labels-all-repos-using-python.yaml
